--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+body {
   background-color: #02040f;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100vh;
@@ -9,7 +9,7 @@ body{
   margin: 0;
 }
 
-div{
+div {
   background-color: #e5dada;
   border: solid 3px #840032;
   width: 40%;
@@ -19,19 +19,19 @@ div{
   padding: 1em;
 }
 
-h1{
-  color: #e59500;
+h1 {
+  color: #840032;
   font-size: 50px;
 }
 
-p{
+p {
   color: #840032;
   font-weight: bold;
   font-size: 250px;
   margin: 0 0 30px 0;
 }
 
-button{
+button {
   background-color: #002642;
   color: #e5dada;
   border-radius: 12px;
@@ -39,8 +39,10 @@ button{
   width: 12em;
   margin-bottom: 1em;
   flex-wrap: wrap;
+  border: 0;
 }
 
 button:hover {
   background-color: #e59500;
+  cursor: pointer;
 }
